--- a/config.conf
+++ b/config.conf
@@ -1,21 +1,21 @@
 [info]
 #开始在一起的日期，格式参考 2022-06-24
-start_date=2022-06-24
+start_date=2022-10-10
 #你女朋友所在的城市，写城市名或省份名或者所在的区  如 "云南"或者"昆明"或者"五华区"
-city1=昆明
+city1=上海
 #你女朋友的家乡，写城市名或省份名或者所在的区  如 "云南"或者"昆明"或者"五华区"
-city2=腾冲
+city2=嘉定区
 #你女朋友的生日，注意格式只写*月*日 如："07-21"
-birthday_lover=07-21
+birthday_lover=04-26
 #你的生日,注意格式只写*月*日 如："07-21"
-birthday_my=05-04
+birthday_my=11-21
 #以下为微信测试号的参数，在申请时会显示
-app_id=wxbc471cb
-app_secret=c4149ff570
+app_id=wxfff470a0dc2d2803
+app_secret=761558b34152de84c6981ad79bb1b45e
 #消息模板ID，在微信测试号中添加模板会自动生成ID
-template_id=o_H3x859-mrYPv2ynphC
+template_id=0ObMW2QCnMAQbq04lhfsxUsHZx3UujRIUWsalkq56vU
 #接收消息的用户ID，让你的女朋友扫微信测试号的二维码，获取微信用户ID
-user_id=oB3
+user_id=o0owI6lADM8XpzERBQ87XxaF1sbo
 #如有多个女朋友或者女朋友有多个微信，请使用以下格式,","隔开
 #user_id=****,***,*****
 
