--- a/config.conf
+++ b/config.conf
@@ -4,7 +4,7 @@ start_date=2022-10-10
 #你女朋友所在的城市，写城市名或省份名或者所在的区  如 "云南"或者"昆明"或者"五华区"
 city1=上海
 #你女朋友的家乡，写城市名或省份名或者所在的区  如 "云南"或者"昆明"或者"五华区"
-city2=嘉定区
+city2=上海
 #你女朋友的生日，注意格式只写*月*日 如："07-21"
 birthday_lover=04-26
 #你的生日,注意格式只写*月*日 如："07-21"
